--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
     "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.13",
     "nodemailer": "^6.6.2",
