--- a/thesis/package.json
+++ b/thesis/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "11.0.5",
     "@angular/router": "11.0.5",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ctrl/ngx-emoji-mart": "^5.1.2",
     "@kolkov/ngx-gallery": "1.2.3",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "angular2-multiselect-dropdown": "4.6.6",
