--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.18",
+    "@nestjs/websockets": "^7.6.18",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.13",
     "nodemailer": "^6.6.2",
