--- a/thesis/package.json
+++ b/thesis/package.json
@@ -46,6 +46,7 @@
     "rellax": "1.12.1",
     "rxjs": "6.6.3",
     "rxjs-compat": "6.6.3",
+    "socket.io-client": "^4.1.2",
     "sweetalert2": "^11.0.17",
     "zone.js": "0.11.3"
   },
