--- a/thesis/package.json
+++ b/thesis/package.json
@@ -39,8 +39,10 @@
     "jquery": "3.5.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "ng2-nouislider": "1.8.2",
     "ngx-chips": "2.2.2",
+    "ngx-socket-io": "^3.3.1",
     "nouislider": "14.6.3",
     "npm": "^7.17.0",
     "popper.js": "1.16.1",
