--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,12 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/platform-socket.io": "^7.6.18",
     "@nestjs/websockets": "^7.6.18",
+    "@types/multer": "^1.4.6",
     "bcrypt": "^5.0.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cloudinary": "^1.26.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.13",
     "nodemailer": "^6.6.2",
